# oad-parser

./: .gitignore  .gitlab-ci.yml  AI_CONTEXT.md  CHANGELOG.md  CODEOWNERS  CUSTOMER-PACK-MANIFEST.json  CUSTOMER-PACK-VALIDATION.json  CUSTOMER-RELEASE-NOTE.md  CUSTOMER_PACK_PUBLICATION.md  README.md  SHA256SUMS.txt  SOURCE-PACK-MANIFEST.json  START_HERE.md  USER_MANUAL.md  makefile  pyproject.toml  standards-manifest.json
config/: ecg-alerts.example.json  ecg_conf.example.ini  oad-cd2-profile.example.ini  oad-parser.example.ini
customer-pack/: PUBLISH-METADATA.json
deploy/systemd/: ecg-parser@.service
docs/: TROUBLESHOOTING.md
docs/adr/: 0001-platform-foundation-scope.md
docs/design/: TRACEABILITY_MATRIX.md  acceptance-test.md  cd2-cli-profile-notes.md  cd2-decoder-registry-notes.md  cd2-parser-roadmap.md  detector-extraction-notes.md  input-output-contract.md  legacy-artifact-map.md  live-capture-notes.md  live-parser-design-delta.md  (+7 more)
oad_parser/: __init__.py  __main__.py  _customer_runtime_profile.py  cli.py  compare.py  config.py  corpus.py  corpus_report.py  errors.py  fingerprints.py  fixture_samples.py  golden.py  inspect.py  models.py  output.py  platform_validation.py  runtime.py  source_pack.py
scripts/: check_source_pack_manifest.py  inspect_pcap.sh  install_customer_runtime.py  make_customer_pack.sh  make_source_pack.sh  quickstart_check.sh  run_live_acceptance_6100pps.py  run_tests_junit.py  run_tevv_suite.py  validate_customer_pack.py  validate_local_pcaps.sh  validate_release_readiness.sh  validate_sanitized_release.sh  verify.sh
(+91 files in other folders)
